# hydra-sim

./: .envrc  .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.local  default.nix  hydra-sim.cabal  shell.nix
datasets/: bitcoin-otc.js  bitcoin-otc.mjs  helpers.js  helpers.mjs  package-lock.json  package.json  plot.mjs  run-simulations.mjs  twitter.mjs
datasets/bitcoin-otc/: build.mjs  duration:3600-tph:10.csv  duration:3600-tph:3.csv
datasets/twitch/: build.mjs  duration:1800-tps:23-proActive:1.csv  duration:1800-tps:50-proActive:1.csv
datasets/twitchauction/: build.mjs  myhelpers.mjs
datasets/twitchauction/ebay/: prices.csv
datasets/twitchclemson/: README  build.mjs  clemson.xlsx  clemson2020.csv  clemsonDistribution.csv  extractCelmson.awk  myhelpers.mjs  sampledFromDuration.csv  verifyDistribution.awk
datasets/twitter/: build.mjs  duration:1800-tph:0.5.csv  duration:1800-tph:1.csv  duration:1800-tph:2.csv
exe/: Main.hs
exe/head/: Main.hs
exe/tail/: Main.hs
experiments/: analyse.r  large-cluster.sh  plots.r  run-bandwidth.sh  run-conc.sh  run.sh
scripts/tail/: .gitignore  README.md  create-events.mjs  download-chain.mjs  generate-datasets.mjs  index.mjs  line-separated-file.mjs  package-lock.json  package.json  plot-txs.mjs  plot.mjs  points-of-interest.mjs  run-simulations.mjs  utils.mjs  view-via-stake-keys.mjs
scripts/tail/datasets/: README.md  ada-usd-max.csv
scripts/tail/results/: .gitignore
src/: Channel.hs  DelayedComp.hs  HeadNode.hs  HeadProtocol.hs  Main.hs  Object.hs  Sized.hs
src/HeadNode/: Handler.hs  ProtocolFunctions.hs  Types.hs
src/Hydra/Tail/: Simulation.hs
src/Hydra/Tail/Simulation/: #Utils.hs#  .#Utils.hs  Analyze.hs  Csv.hs  MockTx.hs  Options.hs  PaymentWindow.hs  SlotNo.hs  Utils.hs
src/HydraSim/: Analyse.hs  Channel.hs  DelayedComp.hs  HeadNode.hs  Multiplexer.hs  Options.hs  ProtocolFunctions.hs  Run.hs  Sized.hs  TailProtocol.hs  Trace.hs  Types.hs
src/HydraSim/Examples/: Baselines.hs  Channels.hs  Nodes.hs  Txs.hs
src/HydraSim/HeadNode/: CoordinatedProtocolHandler.hs  Handler.hs  SimpleProtocolHandler.hs
src/HydraSim/MSig/: Mock.hs
src/HydraSim/Multiplexer/: Exception.hs  Trace.hs
src/HydraSim/Tx/: Class.hs  Mock.hs
src/MSig/: Mock.hs
src/Snapshot/: Mock.hs  Simple.hs
src/Tx/: Class.hs  Mock.hs
test/HydraSim/: AnalyseSpec.hs  Arbitraries.hs  NodesSpec.hs
