cabal-version:       2.2
name:                hydra-sim
version:             0.1.0.0
synopsis:            Simulations for the Hydra Off-Chain Protocol
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Philipp Kant
maintainer:          philipp.kant@iohk.io
copyright:           2019 Input Output (Hong Kong) Ltd.
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common project-config
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DoAndIfThenElse
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
  ghc-options:
    -Werror
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -- TODO: check what deprecated functions should be replaced with
    -Wno-deprecations
                     
library
  import: project-config
  hs-source-dirs:      src
  exposed-modules:
    HydraSim.Analyse
    HydraSim.Channel
    HydraSim.DelayedComp
    HydraSim.Examples.Baselines
    HydraSim.Examples.Channels
    HydraSim.Examples.Nodes
    HydraSim.Examples.Txs
    HydraSim.HeadNode
    HydraSim.HeadNode.CoordinatedProtocolHandler
    HydraSim.HeadNode.SimpleProtocolHandler
    HydraSim.MSig.Mock
    HydraSim.Multiplexer
    HydraSim.Multiplexer.Exception
    HydraSim.Multiplexer.Trace
    HydraSim.Options
    HydraSim.ProtocolFunctions
    HydraSim.Run
    HydraSim.Sized
    HydraSim.Trace
    HydraSim.Tx.Class
    HydraSim.Tx.Mock
    HydraSim.Types
  build-depends:       base
                     , ansi-terminal
                     , containers
                     , contra-tracer
                     , io-sim
                     , io-sim-classes
                     , optparse-applicative
                     , random
                     , time
  ghc-options:
    -haddock

executable hydra-sim
  import: project-config
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , hydra-sim -any
                     , io-sim
                     , io-sim-classes
                     , optparse-applicative
                     , time
  ghc-options:
         -O2
         -threaded
         -rtsopts

test-suite tests
  import: project-config
  hs-source-dirs: test
  other-modules:
    HydraSim.NodesSpec
    HydraSim.Arbitraries
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
      base
    , hspec
    , hydra-sim -any
    , QuickCheck -any
  build-tool-depends:
    hspec-discover:hspec-discover
  ghc-options:
    -threaded
    -rtsopts
